--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<a href="/" class="navbar-brand">Programuj, dziewczyno!</a>
 			</div>
 			<div class="collapse navbar-collapse col-sm-8">
+<!--			fajny przykład na dropdown menu-->
 				<ul class="nav navbar-nav nav-list">
 					<li class="for-dropdown"><a href="#">Materiały do nauki</a>
 						<div class="dropdown">
@@ -143,7 +144,8 @@
 			<p>Copyrights 2017 | All rights reserved Coders Lab</p>
 		</div>
 	</footer>
-	<script src="js/app.js" type="text/javascript"></script>
+<!--	<script src="js/app.js" type="text/javascript"></script>-->
+	<script src="js/warsztaty.js" type="text/javascript"></script>
 </body>
 
 </html>
